--- a/ai_recommender/templates/dashboard.html
+++ b/ai_recommender/templates/dashboard.html
@@ -321,7 +321,7 @@
                             <i class="fas fa-file-alt me-2"></i>Resume
                         </a>
                         <a class="nav-link" href="{% url 'skills' %}">
-                            <i class="fas fa-chart-bar me-2"></i>Skills
+                            <i class="fas fa-graduation-cap me-2"></i>Learning Hub
                         </a>
                         <a class="nav-link" href="{% url 'personality' %}">
                             <i class="fas fa-brain me-2"></i>Personality
