about edited ones more

--- a/ai_recommender/templates/about.html
+++ b/ai_recommender/templates/about.html
@@ -75,7 +75,7 @@
       justify-content:space-between;
       gap:40px;
 
-      height:calc(100vh - 160px);  /* Viewport height minus header */
+      height:calc(100vh - 160px);  
     }
 
     /* LEFT SCROLLABLE CONTENT */
@@ -190,9 +190,9 @@
 <header>
   <div class="logo">AI Career Guide</div>
   <nav>
-    <a href="#">Home</a>
+    <a href="/home">Home</a>
     <a class="active">About</a>
-    <a href="#">Recommendations</a>
+    <!-- <a href="#">Recommendations</a> -->
     <a href="/contact">Contact</a>
   </nav>
 </header>
